--- a/style.css
+++ b/style.css
@@ -5,32 +5,75 @@
 a {
   text-decoration: none;
 }
+
+body {
+  background: grey url(./wall.jpg) no-repeat center center;
+  background-size: cover;
+}
 main {
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 kbd {
   border: 1px solid red;
   width: 4em;
-  height:4em;
+  height: 4em;
   display: inline-block;
   text-transform: uppercase;
   position: relative;
 }
-kbd > button{
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    display: none;
+kbd > button {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  display: none;
 }
-kbd:hover > button{
-    display: inline-block;
-}
-#haha {
+kbd:hover > button {
   display: inline-block;
 }
-#haha > div:nth-child(2) {
-  margin-left: 2em;
+#main {
+  display: inline-block;
 }
-#haha > div:nth-child(3) {
-  margin-left: 4em;
+#main > div:nth-child(2) {
+  margin-left: -18px;
+}
+#main > div:nth-child(3) {
+  margin-left: -110px;
+}
+.key {
+  width: 50px;
+  height: 40px;
+  background: linear-gradient(to bottom, #292929 0%, #111111 100%);
+  border: 1px solid #373737;
+  color: #c5c5c5;
+  border-radius: 5px;
+  box-shadow: 0 0 0 1px #1a1b1c, 0 0 0 2px #1f2020, 0 2px 0 2px #080808;
+  font-size: 16px;
+  font-family: Helvetica;
+  position: relative;
+}
+.key img {
+  width: 16px;
+  height: 16px;
+  position: absolute;
+  left:4px;
+  bottom:2px;
+}
+.key .text {
+  position: absolute;
+  left: 4px;
+  top: 2px;
+}
+.row {
+  margin: 20px;
+}
+.row .key {
+  margin: 0 8px;
+}
+.wrapper {
+  background: rgb(255, 255, 255, 0.3);
+  border-radius: 10px;
 }
