更换背景图

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ a {
 }
 
 body {
-  background: grey url(./wall123.jpg) no-repeat center center;
+  background: grey url(./wall.jpg) no-repeat center center;
   background-size: cover;
 }
 main {
